--- a/AndroidFacebookConnect/res/values/strings.xml
+++ b/AndroidFacebookConnect/res/values/strings.xml
@@ -3,5 +3,7 @@
 
     <string name="hello">Hello World, AndroidFacebookConnectActivity!</string>
     <string name="app_name">AndroidFacebookConnect</string>
+    
+    <string name="facebook_app_id">1404061233149706</string>
 
 </resources>
